--- a/pages/pets/styles/02-pets.css
+++ b/pages/pets/styles/02-pets.css
@@ -1,21 +1,101 @@
-.pets h3 {
+.pets {
 	text-align: center;
+}
+
+.pets h3 {
 	margin: 0 0 60px;
+}
+
+.pets h4 {
+	margin: 30px 0;
 }
 
 .slider {
 	position: relative;
-	margin: 0 0 60px;
+	margin: 0 0 0;
 }
 
 .slider__container {
-	margin: 0 60px;
+	margin: 0 -20px 60px;
 	overflow: hidden;
 	position: relative;
+	height: 900px;
 }
 
 .slider__cards {
 	display: flex;
 	flex-wrap: wrap;
-	transition: 0.5s ease-in-out;
+	transition: 0s;
+}
+
+.slider__arrows {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.slider__arrow,
+.slider__page-num {
+	width: 52px;
+	height: 52px;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 10px;
+}
+
+.slider__page-num {
+	border-radius: 50%;
+	background: var(--primary);
+}
+
+.slider__arrow {
+	background: none;
+}
+
+.slider__arrow:hover {
+	background: var(--primary);
+}
+
+@media screen and (max-width: 1279px) {
+	.slider__container {
+		margin: 0 44px 40px;
+		height: 1365px;
+	}
+
+	.pets h3 {
+		margin: 0 0 30px;
+	}
+
+	.pets .content__container {
+		padding: 80px 0 76px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.slider__container {
+		margin: 0 0 40px;
+	}
+
+	.pets h3 {
+		margin: 0 0 42px;
+	}
+
+	.pets .content__container {
+		padding: 42px 0 42px;
+	}
+
+	.slider__arrow,
+	.slider__page-num {
+		margin: 0 5px;
+	}
+
+	.slider__arrow:first-child {
+		margin: 0 5px 0 0;
+	}
+
+	.slider__arrow:last-child {
+		margin: 0 0 0 5px;
+	}
 }
