--- a/pages/pets/styles/pet-card.css
+++ b/pages/pets/styles/pet-card.css
@@ -1,3 +1,11 @@
 .slider__card {
-	min-width: calc(25% - 80px);
+	min-width: calc(25% - 40px);
+	margin: 0 20px 30px;
+}
+
+@media screen and (max-width: 767px) {
+	.slider__card {
+		min-width: calc(100% - 30px);
+		margin: 0 15px 30px;
+	}
 }
