--- a/pages/pets/styles/02-pets.css
+++ b/pages/pets/styles/02-pets.css
@@ -76,6 +76,35 @@
 @media screen and (max-width: 767px) {
 	.slider__container {
 		margin: 0 0 40px;
+		height: 1250px;
+	}
+
+	.pets h3 {
+		margin: 0 0 42px;
+	}
+
+	.pets .content__container {
+		padding: 42px 0 42px;
+	}
+
+	.slider__arrow,
+	.slider__page-num {
+		margin: 0 5px;
+	}
+
+	.slider__arrow:first-child {
+		margin: 0 5px 0 0;
+	}
+
+	.slider__arrow:last-child {
+		margin: 0 0 0 5px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.slider__container {
+		margin: 0 0 40px;
+		height: 1365px;
 	}
 
 	.pets h3 {
