--- a/styles/02-footer.css
+++ b/styles/02-footer.css
@@ -1,7 +1,12 @@
 footer {
 	width: 100%;
 	position: relative;
-	background: radial-gradient(100% 215.42% at 0% 0%, #473a30 0%, #1b191a 70%);
+	background: radial-gradient(
+			110.67% 538.64% at 5.73% 50%,
+			#513d2f 0%,
+			#1a1a1c 100%
+		)
+		#211f20;
 }
 
 footer .container {
