--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,10 @@ h5 {
 	color: var(--dark-m);
 }
 
+.first-screen a,
 button {
+	display: block;
+	width: fit-content;
 	font: inherit;
 	outline: none;
 	font-size: 17px;
@@ -144,6 +147,7 @@ button {
 	background: var(--primary);
 }
 
+.first-screen a:hover,
 button:hover {
 	border: 2px solid var(--primary-light);
 	background: var(--primary-light);
@@ -172,7 +176,7 @@ footer {
 	width: 100%;
 	height: 100%;
 	background: url(../../../assets/images/noise_transparent.png);
-	background-size: 60px 60px;
+	background-size: 130px 130px;
 	background-repeat: repeat;
 }
 
