--- a/pages/pets/styles/02-pets.css
+++ b/pages/pets/styles/02-pets.css
@@ -59,6 +59,13 @@
 	background: var(--primary);
 }
 
+.slider__arrow span,
+.slider__page-num {
+	font-size: 20px;
+	line-height: 114%;
+	letter-spacing: 1.2px;
+}
+
 @media screen and (max-width: 1279px) {
 	.slider__container {
 		margin: 0 44px 40px;
