--- a/pages/main/styles/01-first-screen.css
+++ b/pages/main/styles/01-first-screen.css
@@ -1,11 +1,8 @@
 .first-screen {
 	position: relative;
-	background: radial-gradient(
-			110.67% 538.64% at 5.73% 50%,
-			#513d2f 0%,
-			#1a1a1c 100%
-		)
-		#211f20;
+	background: url(../../../assets/images/noise_transparent.png),
+		radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%)
+			#211f20;
 }
 
 .first-screen .container {
