--- a/styles/02-footer.css
+++ b/styles/02-footer.css
@@ -1,12 +1,9 @@
 footer {
 	width: 100%;
 	position: relative;
-	background: radial-gradient(
-			110.67% 538.64% at 5.73% 50%,
-			#513d2f 0%,
-			#1a1a1c 100%
-		)
-		#211f20;
+	background: url(../assets/images/noise_transparent.png),
+		radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%)
+			#211f20;
 }
 
 footer .container {
