--- a/pages/pets/styles/01-header.css
+++ b/pages/pets/styles/01-header.css
@@ -30,6 +30,10 @@ header nav a.active:hover {
 	border-bottom: 3px solid var(--primary);
 }
 
+.menu__burger::before {
+	color: var(--dark-3xl);
+}
+
 @media screen and (max-width: 1279px) {
 	header {
 		padding: 30px 30px;
@@ -39,5 +43,25 @@ header nav a.active:hover {
 @media screen and (max-width: 767px) {
 	header {
 		padding: 30px 0;
+	}
+
+	.nav_active {
+		top: 0;
+	}
+
+	.logo__title_light {
+		color: var(--primary);
+	}
+
+	.logo__paragraph_light {
+		color: var(--light-xl);
+	}
+
+	.menu__burger_light::before {
+		color: var(--primary);
+	}
+
+	.nav__list_active a.paragraph-l {
+		color: var(--light-s);
 	}
 }
