--- a/pages/pets/styles/02-pets.css
+++ b/pages/pets/styles/02-pets.css
@@ -24,6 +24,7 @@
 }
 
 .slider__cards {
+	margin: -15px 0 0;
 	display: flex;
 	flex-wrap: wrap;
 	transition: 0s;
@@ -85,6 +86,10 @@
 	.slider__container {
 		margin: 0 0 40px;
 		height: 1250px;
+	}
+
+	.slider__cards {
+		margin: 0;
 	}
 
 	.pets h3 {
