--- a/pages/pets/styles/pet-card.css
+++ b/pages/pets/styles/pet-card.css
@@ -1,6 +1,6 @@
 .slider__card {
 	min-width: calc(25% - 40px);
-	margin: 0 20px 30px;
+	margin: 15px 20px;
 }
 
 @media screen and (max-width: 767px) {
